--- a/index.html
+++ b/index.html
@@ -14,24 +14,14 @@
         <div class="logo">
             <h1>DWM<span>.</span></h1>
         </div>
-        <div class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-            <button class="btn" id="btn-1">Sign in</button>
-            <button class="btn" id="btn-2">Sign up</button>
-        </div>
     </header>
     <section id="home">
         <div class="left-side">
-            <img src="girl_vector.png" alt="img">
+            <img src="girl_vctor.png" alt="">
         </div>
         <div class="right-side">
             <div class="text-content">
-                <h1 class="h-primary">Dreamer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, eum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, officiis?</p>
-                <button class="right-side-btn">get started</button>
+                <h1 class="h-primary">Coming Soon</h1>
             </div>
         </div>
     </section>
