--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <header>
-        <div class="logo" style="margin:40px">
+        <div class="logo" style="margin:30px">
             <h1>DWM<span>.</span></h1>
         </div>
     </header>
     <section id="home">
         <div class="right-side">
             <div class="text-content">
-                <h1 style="font-size:2rem;">Coming Soon</h1>
+                <h1 style="font-size:2rem;"> <h3> In Progress <h3> <br> Coming Soon</h1>
             </div>
         </div>
     </section>
