--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="home">
         <div class="right-side">
             <div class="text-content">
-                <h1 style="font-size:2rem;"> <h3> In Progress <h3> <br> Coming Soon</h1>
+                <h2 style="font-size:1.7rem;"> In Progress </h2> <br> <h1 style="font-size:2rem;"> Coming Soon</h1>
             </div>
         </div>
     </section>
