--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <h2 style="font-size:1.7rem;"> In Progress </h2> <br> <h1 style="font-size:2rem;"> Coming Soon</h1>
             </div>
         </div>
+        <div class="wrap">
+           <div class="loading">
+           <div class="bounceball"></div>
+           <div class="text">NOW LOADING</div>
+           </div>
+        </div>
     </section>
 </body>
 
