--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
     <section id="home">
         <div class="right-side">
             <div class="text-content">
-                <h2 style="font-size:1.7rem;"> In Progress </h2> <br> <h1 style="font-size:2rem;"> Coming Soon</h1>
+                <h2 style="font-size:1.7rem;color:#999;"> In Progress </h2> <br> <h1 style="font-size:2rem;color:#222;"> Coming Soon</h1>
             </div>
-        </div>
-        <div class="wrap">
-           <div class="loading">
-           <div class="bounceball"></div>
-           <div class="text">NOW LOADING</div>
-           </div>
         </div>
     </section>
 </body>
